console controller reading publish controller data to ros (old way still not done) ros publish random coordinates of mines to gui gui draws boxes

--- a/ros/src/calypso/CMakeLists.txt
+++ b/ros/src/calypso/CMakeLists.txt
@@ -47,10 +47,13 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-add_message_files(
-  FILES
-  joystick.msg
-  )
+ add_message_files(
+   FILES
+   joystick.msg
+   mapMessage.msg
+#   Message1.msg
+#   Message2.msg
+ )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -67,10 +70,10 @@ add_message_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-  DEPENDENCIES
-  std_msgs  # Or other packages containing msgs
-)
+ generate_messages(
+   DEPENDENCIES
+   std_msgs
+ )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -104,7 +107,7 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES calypso
-#  CATKIN_DEPENDS rospy
+#  CATKIN_DEPENDS std_msgs
 #  DEPENDS system_lib
 )
 
